# gpu-tigramite

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
benchmarks/: README.md
examples/: 01_simple_usage.py  02_multi_gpu.py  03_benchmark_cpu_vs_gpu.py  04_full_gpu_pipeline.py
src/gpu_tigramite/: __init__.py  _version.py  gpu_batch_processor.py  gpu_parcorr.py  gpu_preprocessing.py  multi_gpu.py  wrapper.py
src/gpu_tigramite/cuda/: __init__.py  gpucmiknn.cpp  gpucmiknn.h  gpucmiknn_cuda.cu
