[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
    "cmake>=3.18",
    "pybind11>=2.11.0",
    "numpy>=1.24.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-tigramite"
version = "1.0.0"
description = "GPU-accelerated Conditional Mutual Information for Tigramite (50-430x faster)"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "GPU-Tigramite Contributors"},
]
maintainers = [
    {name = "GPU-Tigramite Contributors"},
]
keywords = [
    "causal-discovery",
    "gpu",
    "cuda",
    "tigramite",
    "conditional-mutual-information",
    "pcmci",
    "time-series",
    "causality",
    "machine-learning",
    "scientific-computing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Programming Language :: CUDA",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "tigramite>=5.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
multi-gpu = [
    "ray[default]>=2.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
    "sphinx-autodoc-typehints>=1.0",
]
benchmarks = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0",
]
all = [
    "gpu-tigramite[dev,docs,benchmarks,multi-gpu]",
]

[project.urls]
Homepage = "https://github.com/gpu-tigramite/gpu-tigramite"
Documentation = "https://gpu-tigramite.readthedocs.io"
Repository = "https://github.com/gpu-tigramite/gpu-tigramite"
Issues = "https://github.com/gpu-tigramite/gpu-tigramite/issues"
Changelog = "https://github.com/gpu-tigramite/gpu-tigramite/blob/main/CHANGELOG.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["gpu_tigramite*"]
namespaces = false

[tool.setuptools.package-data]
gpu_tigramite = ["py.typed", "*.pyi", "cuda/*.so", "cuda/*.dll"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=gpu_tigramite",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "multi_gpu: marks tests that require multiple GPUs",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tigramite.*",
    "ray.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/gpu_tigramite"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]